attribution to Prof. Messer added

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,8 @@
         </select>
         <button type="submit" class="start-button">Start Exam</button>
     </form>
+    <header class="attribution">
+        <p>This project uses practice exams created by Professor Messer. All rights reserved by the original author. For more information and resources, visit <a href="https://www.professormesser.com/" target="_blank">Professor Messer's website</a>.</p>
+    </header>
 </div>
 {% endblock %}
